# desktop-cat

./: .gitignore  DOWNLOADS.md  LICENSE  README.md  SPRITE_GUIDE.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  产品方案.md
documentation/: architecture.md  automation.md  flows.md  permissions.md  tests.md  variables.md
scripts/: gen-test-sprites.mjs
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/presets/default-cat/: manifest.json
src-tauri/resources/sprites/AI测试喵/: manifest.json
src-tauri/resources/sprites/暴躁喵/: manifest.json
src-tauri/resources/sprites/爱坤/: manifest.json
src-tauri/resources/sprites_花花_backup/: manifest.json
src-tauri/src/: config.rs  lib.rs  main.rs  timer.rs  tray.rs
src-tauri/src/commands/: config.rs  mod.rs  pet.rs  window.rs
src/composables/: useAnimation.ts  useDrag.ts  useTimer.ts
src/i18n/: index.test.ts  index.ts
src/services/: geminiMockService.test.ts  geminiMockService.ts  guardianGenerationService.ts  guardianLocalizationService.test.ts  guardianLocalizationService.ts
src/stores/: guardianStore.ts  healthStats.test.ts  healthStore.ts  localeStore.ts  petStore.ts
src/types/: guardian.ts
src/utils/: petSpriteStyle.test.ts  petSpriteStyle.ts  restAnimation.test.ts  restAnimation.ts  restMotion.test.ts  restMotion.ts  restOutcome.test.ts  restOutcome.ts  spriteActions.test.ts  spriteActions.ts
src/views/: PetView.vue  RestView.vue  SettingsView.vue
