[package]
name = "desktop-cat"
version = "0.2.0"
description = "Desktop Cat - A cute pet with forced rest reminders"
authors = ["you"]
edition = "2021"

[lib]
name = "desktop_cat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time", "sync", "rt-multi-thread", "macros"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
